--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,12 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+
+  display: flex;
+  align-items: center;
 }
 
 h1,
@@ -35,4 +38,249 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+/*styles*/
+.content {/**/
+  display: flex;
+  width: 100%;
+  margin: 0 30px;
+  gap: 30px;
+}
+
+/*result*/
+.result {/**/
+  /*display: flex;
+  flex-direction: column;
+  align-items: center;*/
+  align-items: flex-end;
+}
+.result__video-container {/**/
+  position: relative;
+  inline-size: 710px;
+  margin-bottom: 10px;
+}
+.result__video {/**/
+  width: 100%;
+  height: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/*visually-hidden*/
+.visually-hidden {/**/
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+/*search*/
+.search-form {/**/
+  display: flex;
+  align-items: center;
+  gap: 40px
+}
+.search-form__fieldset {/**/
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+.search-form__fieldset-title {/**/
+  font-size: 18px;
+  font-weight: 400;
+}
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  cursor: pointer;
+}
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+}
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+.search-form__label:has(:focus) {
+  outline: none;
+}
+.search-form__label-text {
+}
+.search-form__textfield {
+  appearance: none;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  font-family: "Fire Sans Condensed", sans-serif;
+  font-size: 18px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.search-form__checkbox-list {
+  display: flex;
+  gap: 10px;
+}
+.search-form__checkbox-list .search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  align-items: center;
+  outline-offset: 1px;
+}
+.search-form__checkbox-list
+  input[type="checkbox"]:checked
+  + .search-form__pseudo-checkbox::after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  background-color: #545050;
+}
+.search-form__checkbox-list
+  input[type="checkbox"]:focus-visible
+  + .search-form__pseudo-checkbox {
+  outline: none;
+  border: 2px solid #545050;
+}
+.search-form__pseudo-checkbox {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+/*content*/
+.content__details {
+  flex-direction: column;
+  position: relative;
+  display: flex;
+  gap: 26px;
+  width: 100%;
+  height: 100%;
+}
+.title {
+  margin-bottom: 10px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+.content__accent {
+  color: #545050;
+}
+.content__list {
+  position: relative;
+  overflow: auto;
+  max-height: 300px;
+}
+
+/*cards*/
+.content__list-item {
+  align-items: center;
+  display: flex;
+  margin-bottom: 16px;
+}
+.content__list-item:not(:last-of-type) {
+  padding-bottom: 30px;
+}
+.content__card-link {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  margin: 2px;
+}
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+.content__video-card {
+  align-items: flex-start;
+  flex-direction: row;
+  display: flex;
+  width: 100%;
+}
+.content__video-card-description-container {
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  display: flex;
+  flex-basis: 0;
+  flex-grow: 1;
+}
+.content__video-card-title {
+  font-family: Oswald, Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #fff;
+  max-width: 200px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.4;
+}
+.content__video-card-description {
+  overflow-wrap: break-word;
+  display: -webkit-box;
+  overflow: hidden;
+  color: #fff;
+  -webkit-line-clamp: 4;
+  line-height: 0.9em;
+  inline-size: 200px;
+  font-weight: 400;
+  block-size: 65px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.content__video-card-thumbnail {
+  object-fit: cover;
+  flex-shrink: 0;
+  height: 103px;
+  width: 194px;
+}
+
+/*button*/
+.button {
+  font-family: "Fira Sans Condensed", sans-serif;
+  background-color: transparent;
+  border: 1px solid #fff;
+  text-align: center;
+  cursor: pointer;
+  color: #fff;
+  line-height: 21.6px;
+  min-height: 34px;
+  font-size: 18px;
+  font-weight: 700;
+  width: 194px;
+}
+button:focus {
+  outline: none;
+}
+button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+.button:hover {
+  text-decoration: underline;
+}
+.button.active {
+  background-color: #545050;
+}
+.search-form__submit-button {
+  align-items: flex-end;
+  width: 194px;
+}
+.more-button {
+  background-color: transparent;
+  width: 100%;
 }
