--- a/styles/style.css
+++ b/styles/style.css
@@ -52,16 +52,17 @@ ol {
 .result {
   align-items: flex-end;
 }
+
 .result__video-container {
   position: relative;
   margin-bottom: 10px;
-  inline-size: 710px;
+  width: 710px;
 }
+
 .result__video {
   object-position: center;
   object-fit: cover;
   block-size: 100%;
-  height: 100%;
   width: 100%;
 }
 
@@ -82,31 +83,36 @@ ol {
   align-items: center;
   gap: 40px;
 }
+
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
   border: none;
-  height: 100%;
   width: 100%;
   gap: 5px;
 }
+
 .search-form__fieldset-title {
   font-weight: 400;
-  font-size: 19px;
+  font-size: 17px;
 }
+
 .search-form__label {
   display: flex;
   align-items: center;
   cursor: pointer;
   gap: 5px;
 }
+
 .search-form__label:hover .search-form__label-text {
   text-decoration: 1px underline #fff;
 }
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
+
 .search-form__textfield {
   font-family: "Fire Sans Condensed", sans-serif;
   background-color: transparent;
@@ -117,27 +123,36 @@ ol {
   appearance: none;
   color: #fff;
   font-size: 18px;
-  padding: 3px 0;
-  width: 100%;
+  padding: 4px 0;
+  width: 220px;
 }
+
 .search-form__textfield:active {
   outline: 1px solid #fff;
 }
+
 .search-form__textfield:focus {
   outline: none;
 }
+
+.search-form__textfield:focus-visible {
+  outline: none;
+}
+
 .search-form__checkbox-list {
   display: flex;
-  gap: 10px;
+  gap: 15px;
 }
+
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   display: flex;
   content: "";
   flex-direction: column;
-  width: 13px;
-  height: 13px;
+  width: 14px;
+  height: 14px;
   background-color: #fff;
 }
+
 .search-form__pseudo-checkbox {
   display: flex;
   align-items: center;
@@ -155,18 +170,21 @@ ol {
   width: 100%;
   height: 100%;
 }
+
 .title {
   text-transform: uppercase;
   color: #fff;
   font-family: Oswald, sans-serif;
-  padding-bottom: 15px;
-  font-size: 65px;
+  padding-bottom: 25px;
+  font-size: 70px;
   font-weight: 700;
-  line-height: 65px;
+  line-height: 70px;
 }
+
 .content__accent {
   color: #545050;
 }
+
 .content__list {
   position: relative;
   overflow-y: scroll;
@@ -178,35 +196,44 @@ ol {
 .content__list-item {
   align-items: center;
 }
+
 .content__list-item:not(:last-of-type) {
   padding-bottom: 30px;
 }
+
 .content__card-link {
   display: block;
   text-decoration: none;
   margin: 4px;
 }
+
 .content__card-link:hover {
-  text-decoration: underline 1px #fff;
+  text-decoration: 1px underline #fff;
 }
+
 .content__card-link:active {
   background-color: #545050;
 }
-.content__card-link:focus-visible {
+
+.content__card-link:focus {
   outline: none;
 }
+
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
+
 .content__card-link_current {
   background-color: #545050;
 }
+
 .content__video-card {
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   width: 100%;
 }
+
 .content__video-card-description-container {
   display: flex;
   justify-content: center;
@@ -214,31 +241,33 @@ ol {
   overflow: hidden;
   flex-grow: 1;
 }
+
 .content__video-card-title {
+  font-family: Oswald, sans-serif;
   text-transform: uppercase;
   text-overflow: ellipsis;
-  font-family: Oswald, sans-serif;
   white-space: nowrap;
   overflow: hidden;
   color: #fff;
   padding: 2.5px 2.5px 5px;
-  max-width: 200px;
   font-weight: 700;
-  line-height: 1.4;
-  font-size: 25px;
+  font-size: 29px;
+  line-height: 1.3;
 }
+
 .content__video-card-description {
   color: #fff;
   padding: 0 2.5px;
   font-weight: 400;
   line-height: 16px;
 }
+
 .content__video-card-thumbnail {
   object-position: center;
   object-fit: cover;
   flex-shrink: 0;
-  height: 103px;
-  width: 194px;
+  height: 102px;
+  width: 200px;
 }
 
 /*button*/
@@ -248,31 +277,35 @@ ol {
   border: 1px solid #fff;
   text-align: center;
   cursor: pointer;
+  margin-top: auto;
   color: #fff;
-  min-height: 34px;
+  padding: 6px 0;
   font-weight: 700;
   font-size: 18px;
   width: 100%;
-  height: 100%;
 }
+
 button:focus {
   outline: none;
 }
+
 .button.active {
   background-color: #545050;
 }
+
 .button:hover {
   text-decoration: underline;
 }
+
 button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
+
 .search-form__submit-button {
   align-items: flex-end;
-  width: 100%;
-  height: 100%;
 }
+
 .more-button {
   background-color: transparent;
   width: 100%;
