--- a/styles/style.css
+++ b/styles/style.css
@@ -43,8 +43,8 @@ ol {
 /*styles*/
 .content {
   display: flex;
+  inline-size: 100%;
   margin: 0 30px;
-  width: 100%;
   gap: 30px;
 }
 
@@ -55,7 +55,7 @@ ol {
 
 .result__video-container {
   position: relative;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
   width: 710px;
 }
 
@@ -63,7 +63,7 @@ ol {
   object-position: center;
   object-fit: cover;
   block-size: 100%;
-  width: 100%;
+  inline-size: 100%;
 }
 
 /*visually-hidden*/
@@ -88,13 +88,13 @@ ol {
   display: flex;
   flex-direction: column;
   border: none;
-  width: 100%;
+  inline-size: 100%;
   gap: 5px;
 }
 
 .search-form__fieldset-title {
   font-weight: 400;
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .search-form__label {
@@ -114,17 +114,18 @@ ol {
 }
 
 .search-form__textfield {
-  font-family: "Fire Sans Condensed", sans-serif;
   background-color: transparent;
   border: 1px solid #fff;
   box-sizing: border-box;
+  font-family: inherit;
+  font-weight: inherit;
   border-right: none;
   border-left: none;
   appearance: none;
   color: #fff;
   font-size: 18px;
-  padding: 4px 0;
-  width: 220px;
+  padding: 2px 0;
+  inline-size: 220px;
 }
 
 .search-form__textfield:active {
@@ -175,7 +176,7 @@ ol {
   text-transform: uppercase;
   color: #fff;
   font-family: Oswald, sans-serif;
-  padding-bottom: 25px;
+  padding: 0 0 25px;
   font-size: 70px;
   font-weight: 700;
   line-height: 70px;
@@ -193,26 +194,22 @@ ol {
 }
 
 /*cards*/
-.content__list-item {
-  align-items: center;
-}
-
 .content__list-item:not(:last-of-type) {
-  padding-bottom: 30px;
+  padding: 0 0 34px;
 }
 
 .content__card-link {
   display: block;
   text-decoration: none;
-  margin: 4px;
-}
-
-.content__card-link:hover {
-  text-decoration: 1px underline #fff;
+  margin: 2px;
 }
 
 .content__card-link:active {
   background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: 1px underline #fff;
 }
 
 .content__card-link:focus {
@@ -229,35 +226,22 @@ ol {
 
 .content__video-card {
   display: flex;
-  align-items: flex-start;
-  flex-direction: row;
-  width: 100%;
-}
-
-.content__video-card-description-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  overflow: hidden;
-  flex-grow: 1;
+  justify-content: space-between;
 }
 
 .content__video-card-title {
   font-family: Oswald, sans-serif;
   text-transform: uppercase;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
   color: #fff;
-  padding: 2.5px 2.5px 5px;
+  padding: 2px 2px 5px;
   font-weight: 700;
-  font-size: 29px;
-  line-height: 1.3;
+  font-size: 30px;
+  line-height: 1;
 }
 
 .content__video-card-description {
   color: #fff;
-  padding: 0 2.5px;
+  padding: 0 2px;
   font-weight: 400;
   line-height: 16px;
 }
@@ -266,7 +250,7 @@ ol {
   object-position: center;
   object-fit: cover;
   flex-shrink: 0;
-  height: 102px;
+  height: 100px;
   width: 200px;
 }
 
@@ -282,11 +266,7 @@ ol {
   padding: 6px 0;
   font-weight: 700;
   font-size: 18px;
-  width: 100%;
-}
-
-button:focus {
-  outline: none;
+  inline-size: 100%;
 }
 
 .button.active {
@@ -295,6 +275,10 @@ button:focus {
 
 .button:hover {
   text-decoration: underline;
+}
+
+button:focus {
+  outline: none;
 }
 
 button:focus-visible {
